# tomodoro

./: curses_practice.py  pyproject.toml  sandbox.ipynb
pomodoro/: __init__.py  ascii_numbers.py  curses_practice.py  pomodoro.py  tomodoro.py
src/tomodoro/: main.py  tui_elements.py
tomodoro/: __init__.py  colors.py  main.py  tui_elements.py
