[tool.poetry]
name = "tomodoro"
version = "0.1.0"
description = ""
authors = ["Joshua Halbert <jdhalbert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.scripts]
tomodoro = 'tomodoro.main:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
